zipline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipline
  namespace: zipline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipline
  template:
    metadata:
      labels:
        app: zipline
    spec:
      containers:
        - name: zipline
          image: ghcr.io/diced/zipline:latest@sha256:8ae3cdf8cdbba2ac98754e9fc4ccec67bbaa86b6e6ab1ccf9683ddcff85eee72
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: uploads
              mountPath: /zipline/uploads
            - name: public
              mountPath: /zipline/public
            - name: themes
              mountPath: /zipline/themes
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "50m"
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: zipline-uploads
        - name: public
          persistentVolumeClaim:
            claimName: zipline-public
        - name: themes
          persistentVolumeClaim:
            claimName: zipline-themes
---
apiVersion: v1
kind: Service
metadata:
  name: zipline
  namespace: zipline
spec:
  selector:
    app: zipline
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30003
      name: http
  type: NodePort
