zipline/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: zipline
spec:
  replicas: 1
  serviceName: postgresql
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:16@sha256:ca0bd484cb98bf4b24eb1010e73fb3fcbd6714d240fbc1a10eea5b7dbecb641d
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "zipline"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "zipline"]
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: zipline-pgdata
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: zipline
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  type: ClusterIP
